--- a/api-catalog-ui/frontend/src/components/Swagger/_swagger.scss
+++ b/api-catalog-ui/frontend/src/components/Swagger/_swagger.scss
@@ -10,6 +10,14 @@ body {
     }
     
   }
+    @media only screen and (max-width: 1240px) {
+        .renderedMarkdown p {
+            max-width: 200px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+
   .responses-inner {
     width: 100%;
     overflow: auto;
